# controlled-generation

./: .gitignore  README.md  pyproject.toml  test_and_submit.sh
meta_generation/: meta_generation.md  meta_generation.py  utils.py
self_correction/: prompts.py  self_correction.md  self_correction.py  utils.py
self_correction/examples/: incr_list.rs  valid_not_verified.py
structured_generation/: coalescence.py  deterministic_finite_automaton.py  fsm_token.py  picoGPT_generate.py  structured_generation.md  utils.py
tests/: test_coalescence.py  test_deterministic_finite_automaton.py  test_fsm_token.py  test_meta_generation.py  test_meta_generation_required.py  test_meta_utils.py  test_picoGPT_generate.py  test_self_correction_required.py  test_structured_generation_required.py  test_structured_utils.py  test_treefinement.py  test_utils.py
